swap file deleted

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,3 +14,7 @@ server {
 location / {
     try_files $uri $uri/ =404; // on precise que si on ne trouve pas le chemin vers la page demande on renvoi une erreur 404
 }
+location ~ \.php$ {	# Pour toutes les requetes php
+    include snippets/fastcgi-php.conf;
+    fastcgi_pass wordpress:9000; # Comment renvoyer les requetes php sur le port 9000
+}
