docker-compose file ok

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,9 @@
 SQL_DATABASE = inception_db
-SQL_USER = 
-SQL_PASSWORD = 
+SQL_USER = lmarecha
+SQL_PASSWORD = password
 
-$ADMIN_USER = 
-$ADMIN_PASSWORD = 
+ADMIN_USER = lmarecha
+ADMIN_PASSWORD = password
+
+USER_NAME = louisea
+USER_PASSWORD = password
