work in rogress

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,13 +9,15 @@ server {
 
     #root and index and server_name
     root /var/www/html; // dossier d'accueil ou se trouve wordpress (la ou je vais trouver la premiere page a afficher)
-    server_name lmarecha.42.fr;
+    # server_name lmarecha.42.fr;
+    server_name localhost;
     index index.php index.html index.htm; // on precise quelle page afficher en premier
 }
 
 location / {
     try_files $uri $uri/ =404; // on precise que si on ne trouve pas le chemin vers la page demande on renvoi une erreur 404
 }
+
 location ~ \.php$ {	# Pour toutes les requetes php
     include snippets/fastcgi-php.conf;
     fastcgi_pass wordpress:9000; # Comment renvoyer les requetes php sur le port 9000
