--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,8 +13,8 @@ server {
 
     #root and index and server_name
     root /var/www/html; // dossier d'accueil ou se trouve wordpress (la ou je vais trouver la premiere page a afficher)
-    # server_name lmarecha.42.fr;
-    server_name localhost;
+    server_name lmarecha.42.fr;
+    # server_name localhost;
     index index.php index.html index.htm; // on precise quelle page afficher en premier
 }
 
