--- a/srcs/.env
+++ b/srcs/.env
@@ -4,6 +4,8 @@ SQL_PASSWORD = password
 
 ADMIN_USER = lmarecha
 ADMIN_PASSWORD = password
+ADMIN_EMAIL = lmarechal@42.fr
 
 USER_NAME = louisea
+USER_EMAIL = louisea@42.fr
 USER_PASSWORD = password
