Mariadb is working properly

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,6 +2,8 @@ SQL_DATABASE = inception_db
 SQL_USER = lmarecha
 SQL_PASSWORD = password
 
+SQL_ROOT_PASSWORD = la
+
 ADMIN_USER = lmarecha
 ADMIN_PASSWORD = password
 ADMIN_EMAIL = lmarechal@42.fr
