--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,27 +2,33 @@ events {}
 
 http {
     include /etc/nginx/mime.types;
+    server {
+        #SSL/TLS Configuration
+        listen 443 ssl;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/nginx/ssl/inception.crt;
+        ssl_certificate_key /etc/nginx/ssl/inception.key;
+
+        #root and index and server_name
+        root /var/www/html;
+        # dossier d'accueil ou se trouve wordpress (la ou je vais trouver la premiere page a afficher)
+        server_name lmarecha.42.fr;
+        # index.html
+        # server_name localhost;
+        index index.php index.html index.htm;
+        # on precise quelle page afficher en premier
+        
+        location / {
+            try_files $uri $uri/ =404; 
+            # on precise que si on ne trouve pas le chemin vers la page demande on renvoi une erreur 404
+
+            	# Pour toutes les requetes php :
+            location ~ \.php$ {
+                include snippets/fastcgi-php.conf;
+                fastcgi_pass wordpress:9000; 
+                # Comment renvoyer les requetes php sur le port 9000
+            }
+        }
+    }
 }
 
-server {
-    #SSL/TLS Configuration
-    listen 443 ssl;
-    ssl_protocols TLSv1.2 TLSv1.3; // protocole demande par le sujet
-    ssl_certificate /etc/nginx/ssl/inception.crt; // location du certificat SSL
-    ssl_certificate_key /etc/nginx/ssl/inception.key; // location de la cle SSL cf Dockerfile
-
-    #root and index and server_name
-    root /var/www/html; // dossier d'accueil ou se trouve wordpress (la ou je vais trouver la premiere page a afficher)
-    server_name lmarecha.42.fr;
-    # server_name localhost;
-    index index.php index.html index.htm; // on precise quelle page afficher en premier
-}
-
-location / {
-    try_files $uri $uri/ =404; // on precise que si on ne trouve pas le chemin vers la page demande on renvoi une erreur 404
-}
-
-location ~ \.php$ {	# Pour toutes les requetes php
-    include snippets/fastcgi-php.conf;
-    fastcgi_pass wordpress:9000; # Comment renvoyer les requetes php sur le port 9000
-}
