--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -8,15 +8,13 @@ RUN         apt-get -y install wget
                 # apt permet d'effectuer l'installation et la désinstallation de paquets
                 # wget est le programme en ligne de commande qui va nous permettre de telecharger des fichiers depuis le Web, on va s'en servir notamment pour telecharger Wordpress
 
-# RUN         apt-get -y install unzip
-
 RUN         apt-get install -y php7.3\
                                 php-fpm\
                                 php-mysql\
                                 mariadb-client
                 # on utilise apt pour installer php et ses dependances
 
-COPY        conf/www.conf /etc/php/7.3/fpm/pool.d
+COPY        conf/www.conf /etc/php/7.3/fpm/php-fpm.conf
 
 RUN         wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 		        # on install WP-CLI : WordPress Command Line Interface (qui va nous permettre de configurer automatiquement WP
