on a une page mais static

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,11 @@
+user www-data;
+
 events {}
 
 http {
-    include /etc/nginx/mime.types;
     server {
+        default_type  application/octet-stream;
+        include /etc/nginx/mime.types;
         #SSL/TLS Configuration
         listen 443 ssl;
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -10,13 +13,12 @@ http {
         ssl_certificate_key /etc/nginx/ssl/inception.key;
 
         #root and index and server_name
-        root /var/www/html;
+        root /var/www/wordpress;
         # dossier d'accueil ou se trouve wordpress (la ou je vais trouver la premiere page a afficher)
-        server_name lmarecha.42.fr;
-        # index.html
-        # server_name localhost;
         index index.php index.html index.htm;
         # on precise quelle page afficher en premier
+        server_name lmarecha.42.fr;
+        # server_name localhost;
         
         location / {
             try_files $uri $uri/ =404; 
@@ -25,8 +27,9 @@ http {
             	# Pour toutes les requetes php :
             location ~ \.php$ {
                 include snippets/fastcgi-php.conf;
-                fastcgi_pass wordpress:9000; 
+                fastcgi_pass wordpress:9000;
                 # Comment renvoyer les requetes php sur le port 9000
+                include fastcgi_params;
             }
         }
     }
