half working still can't access wp-* files and folder

--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,4 +1,5 @@
 [mysqld]
+    pid-file = /run/mysqld/mysqld.pid
     socket = /run/mysqld/mysqld.sock
     datadir = /var/lib/mysql # dosier qui va stoker notre database
     bind_address=* 
